[package]
name = "words"
version = "0.1.0"
authors = ["Andrew Smith <andrewchristophersmith@gmail.com>"]

[[bin]]
name = "ruin_a_book"
path = "src/ruin_a_book.rs"

[[bin]]
name = "search"
path = "src/main.rs"

[dependencies]
astar = "0.1"
edit-distance = "1.0"
pipers = "1.0"

[dependencies.simple_parallel]
git = "https://github.com/bluss/simple_parallel.git"
branch = "crossbeam-upgrade" 
